2009-08-13:
===========

- Implemented support for dynamic PaintWeb GUI resize. Developers now have 
a method for resizing the GUI: PaintWeb.gui.resizeTo(width, height).

- Added a new application event: viewportSizeChange.

- Users can easily resize the PaintWeb GUI with a new resize handle added in the 
status bar.

- The TinyMCE plugin has been updated to synchronize the size of the editor 
viewport with the image editor viewport of PaintWeb. So, now when you start 
editing an image from TinyMCE, the PaintWeb instance will be of a similar size 
(GUI differences account for the size differences). Nonetheless, strictly 
speaking of the PaintWeb image viewport, it always has the same dimensions as 
the TinyMCE editor iframe (where the article is displayed).

- Added a new application event: guiResizeMouseMove. This is used by the new 
viewport resize handle.

- Updated English strings and configuration properties.

2009-08-12:
===========

- Modified the Makefile such that "make moodle" creates an archive which only 
holds the important parts of PaintWeb - without the docs, tests and demos.  
(Suggested by Martin Langhoff, my mentor.)

- Changed the styling of the "plugin bar" of the TinyMCE plugin - the one 
displayed at the top of PaintWeb, when it runs inside TinyMCE. The background 
color is now yellow, and the two Save/Cancel actions use inputs of type=button.  
Thanks to Olli Savolainen.

- The overlay button which shows "Edit" on top of images inside TinyMCE is now 
no longer a link. It is an input of type=button. This change also fixed the 
problem affecting Firefox users: they couldn't easily click the link, for some 
reason. Thanks Olli Savolainen, again!

- The TinyMCE plugin now sets up a reference to the current TinyMCE editor 
instance in the current PaintWeb.config instance. This allows extensions from 
inside PaintWeb to access the TinyMCE editor - using 
PaintWeb.config.tinymceEditor. This is used by the updated Moodle extension.
